# amplify-python-lambda

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
amplify/: backend.ts
amplify/custom/: resource.ts
amplify/custom/fastapi/: resource.ts
amplify/custom/fastapi/src/: index.py  main.py  pyproject.toml
amplify/custom/src/: requirements.txt
