[tool.poetry]
name = "celldata-api"
version = "0.1.0"
description = "API REST para datos de celdas proyecto radioviz"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
